# FuckMati

./: .gitignore  README.md  diagnose.bat  diagnose.py  pyproject.toml  run.bat  start-hidden.vbs  start.ps1
src/c_helper/: __init__.py  core.py  main.py
tests/: test_core.py  test_main.py
