[project]
name = "c-helper"
version = "1.0.0"
description = "C语言题目辅助小工具（状态机版）"
requires-python = ">=3.10"
dependencies = [
    "pystray>=0.19.5",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
    "requests>=2.31.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/c_helper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
